--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,19 +12,25 @@
     - role::vmware_provisioner
 
 - include_tasks: datacenters_fact.yml
-  when: vmware_provisioner_datacenters_fact is not defined
+  when:
+    - vmware_provisioner_gather_datacenters_fact | bool
+    - vmware_provisioner_datacenters_fact is not defined
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::datacenters
 
 - include_tasks: clusters_fact.yml
-  when: vmware_provisioner_clusters_fact is not defined
+  when:
+    - vmware_provisioner_gather_clusters_fact | bool
+    - vmware_provisioner_clusters_fact is not defined
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::clusters
 
 - include_tasks: datastores_fact.yml
-  when: vmware_provisioner_datastores_fact is not defined
+  when:
+    - vmware_provisioner_gather_datastores_fact | bool
+    - vmware_provisioner_datastores_fact is not defined
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::datastores
