--- a/tasks/datacenters_info.yml
+++ b/tasks/datacenters_info.yml
@@ -1,8 +1,8 @@
 ---
-# Get datacenters fact
+# Get datacenters info
 
 - block:
-    - name: Gather vmware datacenters from vCenter/ESXi
+    - name: Gather vmware datacenters info from vCenter
       uri:
         url: >-
           https://{{ vmware_provisioner_hostname }}/rest/vcenter/datacenter
@@ -17,10 +17,10 @@
 
     - name: Setup fact with vmware datacenters
       set_fact:
-        vmware_provisioner_datacenters_fact: >-
+        vmware_provisioner_datacenters_info: >-
           {{ vmware_provisioner_datacenters_result.json.value }}
 
-  when: vmware_provisioner_datacenters_fact is not defined
+  when: vmware_provisioner_datacenters_info is not defined
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::datacenters
