--- a/tasks/vms.yml
+++ b/tasks/vms.yml
@@ -2,14 +2,14 @@
 # Setup vmware vms
 
 - block:
-    - include_tasks: vms_fact_basic.yml
+    - include_tasks: vms_facts_basic.yml
       when: >-
-        vmware_provisioner_gather_all_basic_vm_fact | bool
+        vmware_provisioner_gather_all_basic_vm_facts | bool
         and (vmware_provisioner_basic_vms_fact is not defined
-             or vmware_provisioner_gather_all_basic_vm_fact_force | bool)
+             or vmware_provisioner_gather_all_basic_vm_facts_force | bool)
 
     - include_tasks: >-
-        vms_fact_detailed_{{ vmware_provisioner_vms_provisioning_method }}.yml
+        vms_facts_detailed_{{ vmware_provisioner_vms_provisioning_method }}.yml
       when: vmware_provisioner_vms | length > 0
 
     - block:
