--- a/tasks/vms_facts_basic.yml
+++ b/tasks/vms_facts_basic.yml
@@ -2,7 +2,7 @@
 # Get current vmware vms fact
 
 - block:
-    - name: Gather basic vmware virtual machines fact from vCenter/ESXi
+    - name: Gather basic vmware virtual machines fact from vCenter
       vmware_vm_info:
         hostname: "{{ vmware_provisioner_hostname }}"
         username: "{{ vmware_provisioner_username }}"
@@ -10,12 +10,12 @@
         port: "{{ vmware_provisioner_port | default(omit) }}"
         validate_certs: "{{ vmware_provisioner_validate_certs }}"
         vm_type: all
-      register: vmware_provisioner_vms_basic_fact_result
+      register: vmware_provisioner_vms_basic_facts_result
 
     - name: Setup fact with vmware virtual machines gathered basic fact
       set_fact:
-        vmware_provisioner_vms_basic_fact: >-
-          {{ vmware_provisioner_vms_basic_fact_result.virtual_machines }}
+        vmware_provisioner_vms_basic_facts: >-
+          {{ vmware_provisioner_vms_basic_facts_result.virtual_machines }}
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::vms
