--- a/tasks/vms_facts_basic.yml
+++ b/tasks/vms_facts_basic.yml
@@ -2,7 +2,7 @@
 # Get current vmware vms fact
 
 - block:
-    - name: Gather basic vmware virtual machines fact from vCenter
+    - name: Gather basic vmware virtual machines facts from vCenter
       vmware_vm_info:
         hostname: "{{ vmware_provisioner_hostname }}"
         username: "{{ vmware_provisioner_username }}"
@@ -12,7 +12,7 @@
         vm_type: all
       register: vmware_provisioner_vms_basic_facts_result
 
-    - name: Setup fact with vmware virtual machines gathered basic fact
+    - name: Setup fact with vmware virtual machines gathered basic facts
       set_fact:
         vmware_provisioner_vms_basic_facts: >-
           {{ vmware_provisioner_vms_basic_facts_result.virtual_machines }}
