--- a/tasks/datacenters_info.yml
+++ b/tasks/datacenters_info.yml
@@ -18,9 +18,11 @@
     - name: Setup fact with vmware datacenters
       set_fact:
         vmware_provisioner_datacenters_info: >-
-          {{ vmware_provisioner_datacenters_result.json.value }}
+          {{ lookup("template", "datacenters_info.yml.j2") | from_yaml }}
 
-  when: vmware_provisioner_datacenters_info is not defined
+  when: >-
+    vmware_provisioner_datacenters_info is not defined
+    or vmware_provisioner_gather_datacenters_info_force | bool
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::datacenters
