--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -27,7 +27,9 @@
     - >-
       vmware_provisioner_gather_clusters_info | bool
       or vmware_provisioner_gather_datastores_info | bool
-    - vmware_provisioner_clusters_info is not defined
+    - >-
+      vmware_provisioner_clusters_info is not defined
+      or vmware_provisioner_gather_clusters_info_force | bool
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::clusters
@@ -35,7 +37,9 @@
 - include_tasks: datastores_info.yml
   when:
     - vmware_provisioner_gather_datastores_info | bool
-    - vmware_provisioner_datastores_info is not defined
+    - >-
+      vmware_provisioner_datastores_info is not defined
+      or vmware_provisioner_gather_datastores_info_force | bool
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::datastores
@@ -44,7 +48,9 @@
   when:
     - vmware_provisioner_gather_datacenters_info | bool
     - vmware_provisioner_gather_folders_info | bool
-    - vmware_provisioner_folders_info is not defined
+    - >-
+      vmware_provisioner_folders_info is not defined
+      or vmware_provisioner_gather_folders_info_force | bool
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::foders
