--- a/tasks/folders_info.yml
+++ b/tasks/folders_info.yml
@@ -4,20 +4,27 @@
 - block:
     - name: Gather vmware folders info from vCenter
       vmware_folder_info:
-        datacenter: "{{ vmware_provisioner_datacenter_item }}"
-        hostname: "{{ vmware_provisioner_hostname }}"
-        username: "{{ vmware_provisioner_username }}"
-        password: "{{ vmware_provisioner_password }}"
+        datacenter: "{{ vmware_provisioner_datacenter_item.name }}"
+        hostname: "{{ vmware_provisioner_datacenter_item.hostname }}"
+        username: >-
+          {{ vmware_provisioner_auth_item.username
+             | default(vmware_provisioner_username) }}
+        password: >-
+          {{ vmware_provisioner_auth_item.password
+             | default(vmware_provisioner_password) }}
         port: "{{ vmware_provisioner_port | default(omit) }}"
         validate_certs: "{{ vmware_provisioner_validate_certs }}"
       register: vmware_provisioner_folders_result
-      loop: >-
-        {{ vmware_provisioner_datacenters_info
-           | map(attribute="name")
-           | list }}
+      loop: "{{ vmware_provisioner_datacenters_info }}"
       loop_control:
         loop_var: vmware_provisioner_datacenter_item
+        label: "{{ vmware_provisioner_datacenter_item.name }}"
       no_log: "{{ vmware_provisioner_no_log | bool }}"
+      vars:
+        vmware_provisioner_auth_item: >-
+            {{  vmware_provisioner_auth
+                [vmware_provisioner_datacenter_item.hostname]
+                | default({}) }}
 
     - name: Setup fact with vmware folders
       set_fact:
