--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,7 +17,10 @@
       vmware_provisioner_gather_datacenters_info | bool
       or vmware_provisioner_gather_clusters_info | bool
       or vmware_provisioner_gather_datastores_info | bool
-    - vmware_provisioner_datacenters_info is not defined
+    - >-
+      vmware_provisioner_datacenters_info is not defined
+      or vmware_provisioner_gather_datacenters_info_force | bool
+
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::datacenters
