--- a/tasks/session.yml
+++ b/tasks/session.yml
@@ -1,22 +1,32 @@
 ---
 # Get datacenters fact
 
-- block:
-    - name: Get vmware session id
-      uri:
-        url: >-
-          https://{{ vmware_provisioner_hostname }}/rest/com/vmware/cis/session
-        user: "{{ vmware_provisioner_username }}"
-        password: "{{ vmware_provisioner_password }}"
-        method: POST
-        force_basic_auth: yes
-        status_code: 200
-        return_content: yes
-        validate_certs: "{{ vmware_provisioner_validate_certs }}"
-      register: vmware_provisioner_session_id_result
-      no_log: "{{ vmware_provisioner_no_log | bool }}"
+- name: Get vmware session id
+  uri:
+    url: >-
+      https://{{ vmware_provisioner_vcenter_item }}/rest/com/vmware/cis/session
+    user: >-
+      {{ vmware_provisioner_auth_item.username
+         | default(vmware_provisioner_username) }}
+    password:  >-
+      {{ vmware_provisioner_auth_item.password
+         | default(vmware_provisioner_password) }}
+    method: POST
+    force_basic_auth: yes
+    status_code: 200
+    return_content: yes
+    validate_certs: "{{ vmware_provisioner_validate_certs }}"
+  register: vmware_provisioner_session_id_result
+  loop: "{{ vmware_provisioner_hostnames_list }}"
+  loop_control:
+    loop_var: vmware_provisioner_vcenter_item
+  no_log: "{{ vmware_provisioner_no_log | bool }}"
+  vars:
+    vmware_provisioner_auth_item: >-
+      {{ vmware_provisioner_auth[vmware_provisioner_vcenter_item]
+         | default({}) }}
 
-    - name: Setup fact with vmware session id
-      set_fact:
-        vmware_provisioner_session_id: >-
-          {{ vmware_provisioner_session_id_result.json.value }}
+- name: Setup fact with vmware session id
+  set_fact:
+    vmware_provisioner_session_id: >-
+      {{ lookup("template", "session_ids.yml.j2") | from_yaml }}
