--- a/tasks/vms_facts_detailed_sequential.yml
+++ b/tasks/vms_facts_detailed_sequential.yml
@@ -6,28 +6,41 @@
       vmware_guest_info:
         datacenter: >-
           {{ vm.datacenter
-          | default(vmware_provisioner_vm_datacenter)
-          | default(omit, boolean=true) }}
+             | default(vmware_provisioner_vm_datacenter)
+             | default(omit, boolean=true) }}
         folder: >-
           {{ vm.folder
-          | default(vmware_provisioner_vm_folder)
-          | default(omit, boolean=true) }}
-        hostname: "{{ vmware_provisioner_hostname }}"
+             | default(vmware_provisioner_vm_folder)
+             | default(omit, boolean=true) }}
+        hostname: >-
+          {{ vm.vcenter
+             | default([vmware_provisioner_hostname]
+                       | flatten
+                       | first) }}
         name: "{{ vm.name | default(vmware_provisioner_vm_name) }}"
-        username: "{{ vmware_provisioner_username }}"
-        password: "{{ vmware_provisioner_password }}"
+        username: >-
+          {{ vmware_provisioner_auth_item.username
+             | default(vmware_provisioner_username) }}
+        password: >-
+          {{ vmware_provisioner_auth_item.password
+             | default(vmware_provisioner_password) }}
         port: "{{ vmware_provisioner_port | default(omit) }}"
         uuid: >-
           {{ vm.uuid
-          | default(vmware_provisioner_vm_uuid)
-          | default(omit, boolean=true) }}
+             | default(vmware_provisioner_vm_uuid)
+             | default(omit, boolean=true) }}
         validate_certs: "{{ vmware_provisioner_validate_certs }}"
       register: vmware_provisioner_vms_detailed_facts_result
       failed_when: no
-      loop: "{{ vmware_vms_to_manage }}"
+      loop: "{{ vmware_provisioner_vms_to_manage }}"
       loop_control:
         loop_var: vm
         label: "{{ vm.name }}"
+      vars:
+        vmware_provisioner_auth_item: >-
+          {{ vmware_provisioner_auth
+             [vm.vcenter | default(vmware_provisioner_hostname_default)]
+             | default({}) }}
 
     - name: Setup fact with vmware virtual machines gathered detailed fact
       set_fact:
