--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,11 +3,12 @@
 
 galaxy_info:
   role_name: vmware_provisioner
+  namespace: amtega
   author: Juan Antonio Valiño García
   description: Setup VMware virtual machines
   company: AMTEGA - Xunta de Galicia
   license: GPLv3 or EUPL
-  min_ansible_version: 2.10
+  min_ansible_version: 9.10
   platforms:
     - name: EL
       versions:
