--- a/tasks/clusters_info.yml
+++ b/tasks/clusters_info.yml
@@ -55,6 +55,7 @@
         loop_var: vmware_provisioner_cluster
         label: "{{ vmware_provisioner_cluster.1.name }}"
       ignore_errors: yes
+      no_log: "{{ vmware_provisioner_no_log | bool }}"
       vars:
         vmware_provisioner_auth_item: >-
             {{ vmware_provisioner_auth
