--- a/tasks/vms_disks_sequential.yml
+++ b/tasks/vms_disks_sequential.yml
@@ -45,6 +45,7 @@
           {{ vm.state
              | default(vmware_provisioner_vm_state)
              | default(omit, boolean=true) }}
+      no_log: "{{ vmware_provisioner_no_log | bool }}"
       vars:
         vmware_provisioner_auth_item: >-
           {{ vmware_provisioner_auth
