--- a/tasks/vms_facts_detailed_sequential.yml
+++ b/tasks/vms_facts_detailed_sequential.yml
@@ -36,6 +36,7 @@
       loop_control:
         loop_var: vm
         label: "{{ vm.name }}"
+      no_log: "{{ vmware_provisioner_no_log | bool }}"
       vars:
         vmware_provisioner_auth_item: >-
           {{ vmware_provisioner_auth
