Adapted for CentOS derived distros. Related to ansible/main#263

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -35,19 +35,13 @@ dependencies:
   - role: amtega.packages
     vars:
       packages_os:
-        centos:
+        all:
           7:
             python-pyvmomi: present
           8:
             python3-pyvmomi: present
         fedora:
           all:
-            python3-pyvmomi: present
-        redhat:
-          7:
-            python-pyvmomi: present
-            python3-pyvmomi: present
-          8:
             python3-pyvmomi: present
       packages_python:
         all:
