--- a/meta/main.yml
+++ b/meta/main.yml
@@ -34,6 +34,7 @@ dependencies:
 
   - role: amtega.packages
     vars:
+      packages_load_from_hostvars: no
       packages_os:
         all:
           7:
